--- a/.envrc
+++ b/.envrc
@@ -29,3 +29,6 @@ dotenv .env
 
 # Import secrets from an untracked file `.secrets` (if it exists)
 dotenv_if_exists .secrets
+
+eval "$(conda shell.bash hook)"
+conda activate hackacity2022
